--- a/editor/rapport-ter/biblio.bib
+++ b/editor/rapport-ter/biblio.bib
@@ -24,7 +24,26 @@
 
 
 @Misc{graphviz,
-  title =	 {Le monde de \graphviz},
+  title =	 {Le monde de \graphviz et du format de fichier dot},
   note =	 {\url{http://www.graphviz.org/}}
 }
 
+@Misc{gml,
+  title =	 {Format de fichier Gml},
+  note =	 {\url {http://www.infosun.fim.uni-passau.de/Graphlet/GML/}}
+}
+
+@Misc{gtk,
+  title =	 {GTK, The Gimp Tool Kit},
+  note =	 {\url {http://www.gtk.org/}}
+}
+
+@Misc{lablgtk,
+  title =	 {La librairie Lablgtk },
+  note =	 {\url {http://wwwfun.kurims.kyoto-u.ac.jp/soft/lsl/lablgtk.html}}
+}
+
+@Misc{emacs,
+  title =	 {La page de GNU Emacs },
+  note =	 {\url {http://www.gnu.org/software/emacs/}}
+}
