--- a/editor/rapport-ter/biblio.bib
+++ b/editor/rapport-ter/biblio.bib
@@ -24,12 +24,12 @@
 
 
 @Misc{graphviz,
-  title =	 {Le monde de \graphviz et du format de fichier dot},
+  title =	 {Le monde de \graphviz\ et du format de fichier DOT},
   note =	 {\url{http://www.graphviz.org/}}
 }
 
 @Misc{gml,
-  title =	 {Format de fichier Gml},
+  title =	 {Format de fichier GML},
   note =	 {\url {http://www.infosun.fim.uni-passau.de/Graphlet/GML/}}
 }
 
