--- a/editor/rapport-ter/rapport.tex
+++ b/editor/rapport-ter/rapport.tex
@@ -544,8 +544,7 @@ foncteur, et ainsi, cela permettrait à l'utilisateur de se créer son propre
 
 Je tiens à remercier Mme Marie-Christine Rousset qui m'a mis en
 rapport avec l'équipe Proval et  sans qui je n'aurai sans doute jamais
-pu avoir la chance de faire ce stage en dehors des limites
-habituelles.
+pu avoir la chance de faire ce stage aussi enrichissant.
 Je tiens aussi à remercier Mme Christine Paulin qui m'a accueilli dans
 son équipe, et qui m'a accordé des fonds pour pouvoir effectuer les
 trajets nécessaires. 
