--- a/editor/rapport-ter/rapport.tex
+++ b/editor/rapport-ter/rapport.tex
@@ -6,7 +6,7 @@
 \usepackage{graphicx}
 %\usepackage{alltt}
 
-\newcommand{\ocaml}{O'Caml}
+\newcommand{\ocaml}{OCaml}
 \newcommand{\ocamlgraph}{Ocamlgraph}
 \newcommand{\graphviz}{Graphviz}
 \newcommand{\miquel}{A. Miquel}
@@ -38,25 +38,24 @@ que le nombre de ces composants augmente.
 En effet, la représentation d'un graphe pose un problème dès qu'il
 commence à être d'une taille conséquente, et notamment quand le 
 nombre d'arêtes est relativement élevé en proportion du nombre de
-\noeuds\ : les arêtes se croisent ce qui est à même de gêner la
+\noeuds\ : les arêtes se croisent, ce qui est à même de gêner la
 compréhension.
 
-Bien des gens se sont penchés sur ce thème et un grand nombre
+De nombreux auteurs se sont penchés sur ce thème et un grand nombre
 d'algorithmes de placement dans le plan en ont résulté. On peut citer
 \graphviz~\cite{graphviz} comme suite logicielle très connue dans le
-domaine de la visualisation planaire de graphes qui applique un certain
-nombre de ces algorithmes.
-Ce problème a aussi été abordé d'une manière différente, en tentant de
-réaliser une représentation de graphe dans l'espace. Certes, avec
-cette méthode on peut arriver à ce que les arêtes ne s'entrecroisent
-pas, mais cela ne répond pas tout à fait au problème d'amélioration de
-lisibilité du graphe, car un graphe contenant beaucoup d'éléments
-restera indéchiffrable, même en 3d.
+domaine de la visualisation planaire de graphes utilisant certain de
+ces algorithmes.  Ce problème a aussi été abordé d'une manière
+différente, en tentant de réaliser une représentation dans l'espace.
+Certes, avec cette méthode on peut arriver à ce que les arêtes ne
+s'entrecroisent pas, mais cela ne répond pas tout à fait au problème
+d'amélioration de lisibilité du graphe, car un graphe contenant
+beaucoup d'éléments restera indéchiffrable, même en trois dimensions.
 
 L'objectif de ce stage est de se pencher sur ce sujet mais en
 l'abordant d'une façon encore différente, et ce en utilisant une
 représentation planaire, mais dans le plan hyperbolique de Poincaré,
-contrairement au plan Euclidien couramment utilisé.
+contrairement au plan euclidien couramment utilisé.
 Le point de départ de ce TER est le travail effectué par
 \miquel~\cite{miquel} sur la représentation d'arbres à l'aide de la
 géométrie hyperbolique. 
@@ -94,15 +93,13 @@ Cette géométrie dite hyperbolique est donc basée sur le fait qu'en un
 point $M$, il peut passer une infinité de droites parallèles à la
 droite $D$. Ainsi exprimé, ce concept peut paraître difficile à
 imaginer, mais plusieurs modèles permettant de se représenter la
-géométrie hyperbolique ont été développé depuis sa découverte. En
-prenant la \figl{parallels}, relativement simple, basé sur
-un de ces modèles, on pourra mieux se représenter le fait d'avoir
-plusieurs parallèles passant par un même point. En effet, on peut voir
-que les trois droites $d_1$, $d_2$ et $d_3$ passent par $M$ et sont
-parallèles à $D$ (et non parallèles entre elles car elles se croisent
-en $M$). Précisons que dans cette géométrie, les droites nous
-apparaissent courbes, mais ce sont bien des droites au sens où elles
-représentent le plus court chemin entre deux points.
+géométrie hyperbolique ont été développé depuis sa découverte. La
+\figl{parallels} illustre l'un de ces modèles. On peut y voir que les
+trois droites $d_1$, $d_2$ et $d_3$ passent par $M$ et sont parallèles
+à $D$ (et non parallèles entre elles car elles se croisent en $M$).
+Précisons que dans cette géométrie, les droites nous apparaissent
+courbes, mais ce sont bien des droites au sens où elles représentent
+le plus court chemin entre deux points.
 
 \begin{figure}
   \centering
@@ -138,13 +135,12 @@ disque de Poincaré.
  On peut voir \figa{passage}{de gauche} que pour représenter un
 point sur ce plan, on trace une droite $D$ entre le centre du
 disque unité et le point dans le plan euclidien, et ensuite on prend
-la normal $N$ au plan hyperbolique où $D$ à traversé la lentille. 
+la normal $N$ au plan hyperbolique où $D$ a traversé la lentille. 
 La \figa{passage}{de droite} représente grossièrement le passage d'un dessin du
 plan euclidien au dessin sur le disque de Poincaré.
 
-Les droites sont représentées par des arcs portés par des cercles
-perpendiculaires à $C$ comme illustré par la droite $D_3$ ci-après
-\figs{cercles}.
+Les droites sont des arcs portés par des cercles perpendiculaires à
+$C$ comme illustré par la droite $D_3$ ci-après \figs{cercles}.
 \begin{figure}[!b]
   \centering
    \includegraphics[scale=0.31]{images/perpendiculaire.eps}  
@@ -197,7 +193,7 @@ définition un espace borné, sur le lequel se déplace la tortue ;
 hyperbolique, par définition un espace infini.
 \end{itemize}
 
-Une tortue est définie par un type turtle composé d'une position et
+Une tortue est définie par un type \texttt{turtle} composé d'une position et
 d'une direction. 
 \begin{center}
 \texttt{type turtle = 
@@ -249,16 +245,23 @@ graphe sur ce plan.
 
 \section{Visualisation de graphes en géométrie hyperbolique}
 
+Nous allons commencé par présenter brièvement le travail effectué par
+\miquel~\cite{miquel} sur la représentation des arbres dans le plan de
+Poincaré. Ensuite, nous montrerons comment nous avons choisi de
+représenter les graphes dans le même modèle géométrique. Et enfin,
+nous expliquerons les problèmes de placement auxquels nous avons dû
+faire face et comment nous les avons résolus.
+
 \subsection{Visualisation d'arbres en géométrie hyperbolique}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%\label{arbres}
 Nous nous intéressons d'abord au travail effectué par
 \miquel~\cite{miquel} sur les arbres qui sont un cas particulier, et
 simplifié, de graphes ayant une seule source et aucun cycle. Le
-problème est bien-sûr de placer correctement les \noeuds\. Ensuite le
+problème est bien-sûr de placer correctement les \noeuds. Ensuite le
 traçage des arêtes est relativement trivial avec l'aide de notre
 tortue et de ses fonctions de mouvement l'accompagnement.
 
-Pour répartir les \noeuds\ d'un arbre dans le plan hyperbolique, il se
+Pour répartir les \noeuds\ d'un arbre dans le plan hyperbolique, \miquel se
 base sur deux propriétés de ce plan :
 \begin{itemize}
 \item une droite du plan le sépare en deux demi-plans, tout comme en
@@ -267,7 +270,7 @@ base sur deux propriétés de ce plan :
   disjoints, contrairement à la géométrie euclidienne.
 \end{itemize}
 
-Pour arriver à répartir l'espace en $n$ demi-plans, \miquel\ illustre
+Pour arriver à séparer l'espace en $n$ demi-plans, \miquel\ illustre
 le problème par le paradoxe des $n$ dictateurs. Le principe en est
 simple : dans un espace fini à deux dimensions, $n$ dictateurs situés en
 un même point désirent se partager le monde de façon à régner chacun
@@ -285,7 +288,7 @@ ses deux pieds).
 $$
 d_n= \mathrm{ath}\left(\mathrm{tan}\left(\frac{\pi}{4}-\frac{\pi}{2n}\right)\right)
 $$ 
-Donc pour le placement des \noeuds, il pose la racine au centre du
+Pour le placement des \noeuds, il pose donc la racine au centre du
 disque, sépare l'espace en $n$ demi-plans, où $n$ est le nombre de fils de
 la racine, et enfin fait avancer la tortue de chaque fils suivant la
 direction et la distance données. Ensuite, il fait de même
@@ -300,7 +303,7 @@ le résultat final sur une arborescence de répertoire Unix.
 \end{figure}
 
 
-Après avoir déterminer où placer les \noeuds\ d'un arbre, on peut
+Après avoir déterminé où placer les \noeuds\ d'un arbre, on peut
 s'intéresser au placement des \noeuds\ d'un graphe qui pose certains
 problèmes comme, par exemple, le fait que des arêtes peuvent se croiser.
 
@@ -343,10 +346,11 @@ heuristiques concernant ces deux points.
 \subsection{Heuristiques de placement}
 
 Pour parcourir un graphe, on a principalement deux choix : le parcours
-en profondeur (Dfs, Depth-first search) et le parcours en largeur (Bfs, Breadth-first search). Nous avons
+en profondeur (Dfs, de l'anglais \textit{Depth-first search}) et le
+parcours en largeur (Bfs, de l'anglais \textit{Breadth-first search}). Nous avons
 implanté les deux, ce qui a permis de voir les conséquences d'un tel
 choix. En observant les deux figures suivantes (fig. \ref{fig:dfs},
-\ref{fig:bfs}), on se doute que le choix entre les deux ne va pas être
+\ref{fig:bfs}), on se doute que le choix entre les deux n'est pas
 évident.
 
  Au premier coup d'oeil, le Dfs semble moins croiser
@@ -355,7 +359,7 @@ graphe. En effet, sur la \figl{dfs} de gauche, on voit une tendance à regrouper 
 \noeuds\ et à éviter trop de croisement d'arêtes, contrairement à la
 \figl{dfs} de droite qui a tendance, elle, à se faire croiser une grande
 quantité d'arêtes. Mais à la décharge de Bfs, il permet d'afficher
-plus de noeud que Dfs (respectivement 16 contre 11, pour la
+plus de \noeuds\ que Dfs (respectivement 16 contre 11, pour la
 \figl{dfs}), ce qui implique l'affichage de plus d'arêtes et donc un
 risque plus grand que certaines se croisent. 
 
@@ -407,14 +411,13 @@ permet de choisir Dfs.
 Pour palier les défauts de placement engendrés par le Bfs, on a décidé
 d'ordonnancer les successeurs d'un \noeud\ de sorte que le moins
 d'arêtes possibles ne se croisent. Pour ce faire, on commence tout
-d'abord à construire la liste de tous les successeurs d'un noeud qui
+d'abord par construire la liste de tous les successeurs d'un noeud qui
 ne sont pas déjà affichés. De cette liste, on construit la liste des
-composantes fortement connexes.  Ensuite, pour ordonner cette liste de
-composante, on prend pour chaque composante le \noeud\ de degré
-minimal et on effectue à partir de lui un parcours en profondeur. Les
-listes résultantes de l'ensemble des composantes sont ensuite
-concaténées pour nous rendre la liste ordonnée des successeurs du
-\noeud\ étudié.
+composantes fortement connexes.  Ensuite, pour ordonner chaque
+composante, on son \noeud\ de degré minimal et on effectue à partir de
+lui un parcours en profondeur. Les listes résultantes de l'ensemble
+des composantes sont ensuite concaténées pour donner la liste
+ordonnée des successeurs du \noeud\ étudié.
 
 \section{Réalisation dans \ocamlgraph}
 
@@ -434,7 +437,7 @@ des structures de données et des algorithmes indépendants. Ainsi,
 l'utilisateur peut utiliser sa propre structure de données et créer
 les modules correspondants. Pour le programmeur, les foncteurs évitent
 une duplication inutile de code.
-\ocamlgraph\ sans être une librairie complète, en ce sens où tous les
+\ocamlgraph\ , sans être une librairie complète, en ce sens où tous les
 algorithmes existants sur les graphes n'y sont pas implantés, est bien
 plus qu'une base car pleinement fonctionnelle et d'une utilisation
 relativement aisée, une fois que le principe de fonctionnement à été compris.
@@ -455,7 +458,7 @@ pratiques et ``historiques''(il a été développé avec et pour
 \subsection {Fonctionnalités}
 L'éditeur de graphes comporte certaines fonctions de base pour remplir
 son objectif de visualisation et d'édition. Il permet de traiter les
-fichiers aux formats Dot\cite{graphviz} et Gml\cite{gml}. On peut donc ouvrir un fichier, créer
+fichiers aux formats Dot \cite{graphviz} et Gml \cite{gml}. On peut donc ouvrir un fichier, créer
 un nouveau graphe, et sauvegarder sous ces formats. 
 Concernant l'édition, on peut ajouter des \noeuds\  isolés et des successeurs
 à un \noeud. Il est possible de créer des arêtes entre un \noeud\ et un
@@ -466,7 +469,7 @@ Il est aussi possible de changer le \noeud\ racine à partir duquel le
 graphe est dessiné.
 
 À la ligne de commande, il est possible de lancer l'éditeur en
-chargeant directement un graphe (format Gml\cite{gml} ou Dot\cite{graphviz}), et aussi de
+chargeant directement un graphe (format Gml ou Dot), et aussi de
 spécifier certains paramètres :
 \begin{itemize}
 \item le taux de rafraîchissement, option \texttt{-rr} $n$, où $n > 0$;
@@ -477,18 +480,18 @@ spécifier certains paramètres :
 
 \section{Conclusion}
 
-Dans ce stage, nous nous sommes intéressés au problème complexe et bien connu de
-l'affichage de graphes. Pour cela, nous avons repris le travail
-effectué par \miquel~\cite{miquel} sur l'affichage d'arbres infinis
-avec une représentation dans la géométrie hyperbolique, et plus
-précisément dans le modèle de Poincaré. Nous avons étendu ce travail à
-la visualisation des graphes. Nous avons porté le tout sous une
-bibliothèque graphique de plus haut niveau, GTK+ \cite{gtk} dont le
-portage en \ocaml\ s'appelle Lablgtk2 \cite{lablgtk}, qui permet des
-interactions bien plus intéressantes avec l'utilisateur contrairement
-à l'utilisation de la bibliothèque Graphics de \ocaml\ utilisée par \miquel.
-Au final, nous nous sommes intéressés à l'implantation des
-fonctionnalités d'édition de base (ajout/suppression de \noeuds /d'arêtes).
+Dans ce stage, nous nous sommes intéressés au problème complexe et
+bien connu de l'affichage de graphes. Pour cela, nous avons repris le
+travail effectué par \miquel~\cite{miquel} sur l'affichage d'arbres
+infinis avec une représentation dans la géométrie hyperbolique, et
+plus précisément dans le modèle de Poincaré. Nous avons étendu ce
+travail à la visualisation des graphes. Nous avons porté le tout sous
+une bibliothèque graphique de plus haut niveau, GTK+ \cite{gtk} dont
+le portage en \ocaml\ s'appelle Lablgtk2 \cite{lablgtk}, qui permet
+des interactions bien plus intéressantes avec l'utilisateur que la
+bibliothèque Graphics d'\ocaml\ utilisée par \miquel.  Au final, nous
+nous sommes intéressés à l'implantation des fonctionnalités d'édition
+de base (ajout/suppression de \noeuds\ et d'arêtes).
 
 Durant ce stage, plusieurs points plus ou moins nouveaux et plus ou
 moins difficiles ont dû être abordés :
@@ -497,62 +500,63 @@ moins difficiles ont dû être abordés :
 \item la découverte des modules et de la couche objet
   d'\ocaml~\cite{ocaml};
 \item l'utilisation intensive de Linux;
-\item la découverte d'Emacs\cite{emacs};
+\item la découverte d'Emacs \cite{emacs};
 \item la découverte de GTK et de son pendant en \ocaml, Lablgtk;
 \item la découverte de Latex.
 \end{itemize}
 Les sujets les plus difficiles à aborder, à mon avis, ont été d'une
-part les foncteurs \ocaml\ ce qui fût nécessaire pour la reprise des
+part les foncteurs d'\ocaml\ ce qui fût nécessaire pour la reprise des
 idées du code d'\miquel\ et aussi l'utilisation d'\ocamlgraph, et
 d'autre part, la librairie graphique Lablgtk basée sur la couche objet
 d'\ocaml\ ce qui l'a rendait un peu plus difficile à appréhender, ne
 connaissant ni la syntaxe ni les principes de la couche objet d'\ocaml.
 
 Le travail effectué à l'heure actuelle n'est qu'une base qui peut être
-amélioré. Quelques grands thèmes peuvent être envisagés pour son
+améliorée. Quelques grands thèmes peuvent être envisagés pour son
 évolution. D'une part, on peut effectuer des ajouts triviaux pour
-permettre un peu plus de diversité dans les graphes éditables et dans
-les fonctions d'édition tels que :
+permettre un peu plus de diversité dans les fonctions d'édition tels
+que :
 \begin{itemize}
 \item la gestion des graphes orientés;
 \item l'ajout d'étiquette aux arêtes;
-\item la création d'une clique avec un ensemble de \noeuds sélectionnés;
+\item la création d'une clique avec un ensemble de \noeuds\ sélectionnés;
 \item la création d'un graphe plein de $n$ \noeuds.
 \end{itemize}
 
 D'autre part, on pourrait étudier le passage à l'échelle, et voir comment
-réagirait l'éditeur face à des milliers, des millions de \noeuds. On
+réagirait l'éditeur face à des milliers, voire des millions de \noeuds. On
 peut penser qu'une optimisation du code serait nécessaire pour arriver
-à gérer une grande quantité d'éléments. Mais, le problème ne se
-situerait pas qu'au niveau des ressources consommées, mais aussi sur
-l'interface graphique actuel, comme par exemple pouvoir rajouter la
-visualisation des composantes connexes dans l'arbre de droite.
+à gérer une grande quantité d'éléments. Mais le problème ne se
+situerait pas seulement au niveau des ressources consommées, mais aussi de
+l'interface graphique actuelle. On peut imaginer une modification de
+l'abre situé en partie droite de l'application en permettant
+d'englober les \noeuds\ dans leur composante respective.
 
-On pourrait, aussi, améliorer l'intégration d'\ocamlgraph\ à
+On pourrait aussi améliorer l'intégration d'\ocamlgraph\ à
 l'éditeur, en ajoutant des possibilités de visualiser des algorithmes
 implantés dans \ocamlgraph\ comme afficher le plus court chemin entre
 deux \noeuds, faire une k-coloration d'un graphe. Ceux-ci
 permettraient à cet éditeur de prendre une tournure pédagogique en
 permettant ce genre d'opérations.
 
-Et enfin, la transformation probablement la plus intéressante pour un usage
-professionnel, ce serait de transformer l'éditeur en un
-foncteur, et ainsi, cela permettrait à l'utilisateur de se créer son propre
-éditeur de graphe avec ses structures de données et ses algorithmes appropriés.
+Et enfin, la transformation probablement la plus intéressante pour un
+usage professionnel serait de transformer l'éditeur en un foncteur, et
+ainsi, cela permettrait à l'utilisateur de se créer son propre éditeur
+de graphe avec ses structures de données et ses algorithmes
+appropriés.
 
 \section*{Remerciement}
 
 Je tiens à remercier Mme Marie-Christine Rousset qui m'a mis en
-rapport avec l'équipe Proval et  sans qui je n'aurai sans doute jamais
-pu avoir la chance de faire ce stage aussi enrichissant.
-Je tiens aussi à remercier Mme Christine Paulin qui m'a accueilli dans
-son équipe, et qui m'a accordé des fonds pour pouvoir effectuer les
-trajets nécessaires. 
-Et bien entendu, le meilleur pour la fin, je suis extrêmement
+rapport avec l'équipe Proval et sans qui je n'aurai sans doute jamais
+pu avoir la chance de faire ce stage aussi enrichissant.  Je tiens
+aussi à remercier Mme Christine Paulin qui m'a accueilli dans son
+équipe, et qui m'a accordé des fonds pour pouvoir effectuer les
+trajets nécessaires.  Et bien entendu, je suis extrêmement
 reconnaissant à l'égard de M. Jean-Christophe Filliâtre qui a toujours
 été là pour m'orienter, me conseiller et me corriger. Le fait de
 travailler à ses côtés m'a énormément appris, aussi bien sur les
-outils utilisés, que par les méthodes de travail qu'il emploie. 
+outils utilisés, que par les méthodes de travail qu'il emploie.
 
 
 
