--- a/editor/rapport-ter/rapport.tex
+++ b/editor/rapport-ter/rapport.tex
@@ -17,6 +17,7 @@
 \newcommand{\figl}[1]{figure \ref{fig:#1}}
 \newcommand{\figa}[2]{(fig. \ref{fig:#1} #2)}
 
+\pagestyle{plain}
 \begin{document}
 
 \title{Édition interactive de graphes\\ en géométrie hyperbolique}
