--- a/editor/rapport-ter/soutenance.tex
+++ b/editor/rapport-ter/soutenance.tex
@@ -114,13 +114,16 @@ Arêtes s'affranchissant des frontières entre demi-plans \smallskip
 
 \begin{frame}
   \frametitle{Application à la visualisation de graphes}
-Deux parcours possibles : en profondeur (Dfs) et en largeur (Bfs)
+  Deux parcours possibles : 
+  \begin{center}
+    en profondeur (Dfs) et en largeur (Bfs)  
+  \end{center}
   \begin{center}
    \begin{minipage}{0.49\linewidth}
-    \includegraphics[scale=0.30]{images/parcours_dfs.eps} 
+     \includegraphics[scale=0.27]{images/parcours_dfs.jpg} 
   \end{minipage}
   \begin{minipage}{0.49\linewidth}
-    \includegraphics[scale=0.30]{images/parcours_bfs.eps}
+    \includegraphics[scale=0.27]{images/parcours_bfs.jpg}
   \end{minipage}
 
   \end{center}
