--- a/editor/rapport-ter/soutenance.tex
+++ b/editor/rapport-ter/soutenance.tex
@@ -113,7 +113,7 @@ Arêtes s'affranchissant des frontières entre demi-plans \smallskip
 \end{frame}
 
 \begin{frame}
-  \frametitle{Application à la visualisation de graphes}
+  \frametitle{Parcours des graphes}
   Deux parcours possibles : 
   \begin{center}
     en profondeur (Dfs) et en largeur (Bfs)  
@@ -129,9 +129,29 @@ Arêtes s'affranchissant des frontières entre demi-plans \smallskip
   \end{center}
 \end{frame}
 
-% 2 autres transparents expliquant les solutions : le parcours / l'ordonnancement des successeurs
 
-% 1 transparent sur la réalisation en Ocaml
+\begin{frame}
+\frametitle{Ordonnancement des successurs d'un n\oe ud}
+  \begin{itemize}
+  \item regrouper les composantes 
+    \begin{center}
+          \includegraphics[scale=0.27]{images/composantes.jpg}
+    \end{center}
+  \item parcourir chaque composante 
+    \begin{center}
+      \includegraphics[scale=0.27]{images/parcours-composante.jpg} 
+    \end{center}
+  \end{itemize}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Réalisation en Ocaml}
+  \begin{itemize}
+  \item Utilisation d'Ocamlgraph
+  \item Implémentation en GTK2+ par le biais de lablgtk2
+  \end{itemize}
+\end{frame}
+
 
 \begin{frame}
   \begin{center}
