--- a/editor/rapport-ter/soutenance.tex
+++ b/editor/rapport-ter/soutenance.tex
@@ -149,6 +149,7 @@ Arêtes s'affranchissant des frontières entre demi-plans \smallskip
   \begin{itemize}
   \item Utilisation d'Ocamlgraph
   \item Implémentation en GTK2+ par le biais de lablgtk2
+  \item Environ 1500 lignes de code
   \end{itemize}
 \end{frame}
 
@@ -160,7 +161,18 @@ Arêtes s'affranchissant des frontières entre demi-plans \smallskip
 \end{frame}
 
 \begin{frame}
-  % extensions possibles
+  \frametitle{Améliorations et extensions possibles}
+  \begin{itemize}
+  \item Fonctionnalités de base
+    \begin{itemize}
+    \item Gestion des graphes orientés
+    \item Arêtes pondérables
+    \item Création de clique pour ensemble sélectionné
+    \end{itemize}
+  \item Optimisation du code et rendre plus fluide l'animation
+  \item Augmentation de l'intégration d'Ocamlgraph
+  \item Fonctorisation du programme
+  \end{itemize}
 \end{frame}
 
 \end{document}
