--- a/editor/rapport-ter/soutenance.tex
+++ b/editor/rapport-ter/soutenance.tex
@@ -102,14 +102,13 @@ Répartition du plan entre les successeurs de la racine
   \frametitle{Application à la visualisation de graphes}
   Répartition d'un demi-plan entre les successeurs d'un n\oe ud
   \begin{center}
-    \begin{minipage}{0.2\linewidth}
-\begin{verbatim}
-Successeurs de :
-    A -> [1; 2; 3 ]
-    B -> [3; 4; 5 ] 
-\end{verbatim}
-    \end{minipage}
-    \begin{minipage}{0.8\linewidth}
+    \begin{minipage}{0.3\linewidth}
+\begin{tabular}{l}
+    A $\rightarrow$ [1; 2; 3 ] \\
+    B $\rightarrow$ [3; 4; 5 ] 
+\end{tabular}
+    \end{minipage} \quad
+    \begin{minipage}{0.6\linewidth}
       \includegraphics[scale=0.3]{images/dictateursniv2.jpg}   
     \end{minipage}
   \end{center}
