--- a/editor/rapport-ter/soutenance.tex
+++ b/editor/rapport-ter/soutenance.tex
@@ -58,11 +58,13 @@ Parc Club Université, 91893 ORSAY}
   \begin{itemize}
   \item $V^e$ postulat de la géométrie euclidienne
     \begin{quote}
-      \og Étant donnés une droite $D$ et un point M, il n'existe qu'une seule
+      \og Étant donnés une droite $D$ et un point $M$, il n'existe qu'une seule
       droite passant par $M$ et qui soit parallèle à $D$. \fg
     \end{quote}
-  \item Théories de Bolyai et Lobatchevsky contredisant ce postulat et créant la géométrie hyperbolique
-  \item Construite sur le fait qu'en un point $M$, il peut passer une infinité de droites (ici $D_1$, $D_2$, $D_3$) parallèles à la droite $D$
+  \item Théories de Bolyai et Lobatchevsky contredisant ce postulat
+    et introduisant la géométrie hyperbolique
+  \item En un point $M$, il peut passer une infinité de droites
+    parallèles à la droite $D$ 
     \bigskip
     \begin{center}
            \includegraphics[height=2.5cm]{images/parallels.png}
@@ -118,8 +120,16 @@ Répartition du plan entre les successeurs de la racine
   \frametitle{Application à la visualisation de graphes}
 Arêtes s'affranchissant des frontières entre demi-plans \smallskip
   \begin{center}
+    \begin{minipage}{0.3\linewidth}
+\begin{tabular}{l}
+    A $\rightarrow$ [1; 2; 3 ] \\
+    B $\rightarrow$ [3; 4; 5 ] 
+\end{tabular}
+    \end{minipage} \quad
+    \begin{minipage}{0.6\linewidth}
     \includegraphics[scale=0.3]{images/intern-edge.jpg}   
-  \end{center}
+  \end{minipage}
+\end{center}
 \end{frame}
 
 \begin{frame}
