--- a/editor/rapport-ter/soutenance.tex
+++ b/editor/rapport-ter/soutenance.tex
@@ -78,7 +78,7 @@ Parc Club Université, 91893 ORSAY}
   Passage du plan euclidien au plan de Poincaré
 
   \begin{center}
-        \includegraphics[scale=0.5]{images/lentille1.png}   
+        \includegraphics[scale=0.5]{images/lentille1.jpg}   
   \end{center}
 \end{frame}
 
@@ -94,7 +94,7 @@ Parc Club Université, 91893 ORSAY}
 
 \begin{frame}
   \frametitle{Application à la visualisation de graphes}
-Répartition du plan entre les successeurs de la racine
+Répartition du plan entre les successeurs d'un n\oe ud 
   \begin{center}
     \includegraphics[scale=0.3027]{images/dictateurs.jpg}   
   \end{center}
